--- a/Web/Views/Rating/DisplayTemplates/FactRatings.cshtml
+++ b/Web/Views/Rating/DisplayTemplates/FactRatings.cshtml
@@ -25,7 +25,7 @@
           <td class="text-center">@(ratingCounter++)</td>
           <td class="text-center"><strong>@item.Rating</strong></td>
           <td class="text-center">@item.Votes</td>
-          <td>@Html.ActionLink(item.Movie.Title, "Details", "Movie", new { id = item.MovieId }, null)</td>
+          <td>@item.Movie.Title</td>
           @*<td>@Html.Raw(string.Join(", ", item.Movie.Directors.Select(x => Html.ActionLink(x.Name, "ByDirector", "Rating", new { id = x.Id }, null).ToHtmlString()).ToArray()))</td>*@
           <td>@Html.Raw(string.Join(", ", item.Genres.Select(x => Html.ActionLink(x.Name, "ByGenre", "Rating", new { id = x.Id }, null).ToHtmlString()).ToArray()))</td>
           <td>@Html.Raw(string.Join(", ", item.Countries.Select(x => Html.ActionLink(x.Name, "ByCountry", "Rating", new { id = x.Id }, null).ToHtmlString()).ToArray()))</td>
