--- a/Web/Views/Rating/Filter.cshtml
+++ b/Web/Views/Rating/Filter.cshtml
@@ -4,6 +4,9 @@
 <hr />
 @using (Html.BeginForm())
 {
+  
+  @Html.ValidationSummary()
+  
   <div class="row">
     <div class="col-lg-3">
       <div class="form-group">
