--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
   @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-  <div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar navbar-inverse navbar-static-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -59,6 +59,7 @@
   
 
   @Scripts.Render("~/bundles/jquery")
+  @Scripts.Render("~/bundles/jqueryval")
   @Scripts.Render("~/bundles/bootstrap")
   @Scripts.Render("~/bundles/flot")
   @RenderSection("scripts", required: false)
