--- a/Web/Views/Rating/Filter.cshtml
+++ b/Web/Views/Rating/Filter.cshtml
@@ -4,8 +4,12 @@
 <hr />
 @using (Html.BeginForm())
 {
-  
-  @Html.ValidationSummary()
+  if (!ViewData.ModelState.IsValid)
+  {
+    <div class="alert alert-danger">
+      @Html.ValidationSummary()
+    </div>
+  }
   
   <div class="row">
     <div class="col-lg-3">
@@ -29,8 +33,10 @@
   </div>
 }
 
-@Html.DisplayFor(m => Model.Ratings, "FactRatings")
-
+@if (Model != null)
+{
+  @Html.DisplayFor(m => Model.Ratings, "FactRatings")
+}
 
 @section scripts
 {
