--- a/Web/Views/Sale/Filter.cshtml
+++ b/Web/Views/Sale/Filter.cshtml
@@ -4,7 +4,12 @@
 <hr />
 @using (Html.BeginForm())
 {
-  @Html.ValidationSummary()
+  if (!ViewData.ModelState.IsValid)
+  {
+    <div class="alert alert-danger">
+      @Html.ValidationSummary()
+    </div>
+  }
   
   <div class="row">
     <div class="col-lg-3">
@@ -28,7 +33,10 @@
   </div>
 }
 
-@Html.DisplayFor(m => Model.Sales, "FactSales")
+@if (Model != null)
+{
+  @Html.DisplayFor(m => Model.Sales, "FactSales")
+}
 
 
 @section scripts
